--- a/nasdaq.ipynb
+++ b/nasdaq.ipynb
@@ -118,9 +118,9 @@
     "    \"download.directory_upgrade\": True,     # Automatically overwrite existing files\n",
     "    \"safebrowsing.enabled\": True,           # Enable safe browsing\n",
     "})\n",
-    "#options.add_argument('--headless') # headless mode to reduce resource usage\n",
+    "options.add_argument('--headless') # headless mode to reduce resource usage\n",
     "options.add_argument('--disable-search-engine-choice-screen') # disable seach engine selection screen with Chrome driver v127\n",
-    "#options.add_argument('--start-maximized')  # Start maximised for headless\n",
+    "options.add_argument('--start-maximized')  # Start maximised for headless\n",
     "\n",
     "\n",
     "# Set service for executable path\n",
